# data-viewer

./: .flake8  README.md  pyproject.toml
.github/workflows/: ci.yml
data_viewer/: __main__.py  console.py  parsers.py  person.py  renderers.py  serializers.py
tests/: people.json  people.yaml  test_parsers.py  test_renderers.py  test_serializers.py
